--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "$schema": "https://fbflipper.com/schemas/plugin-package/v2.json",
-  "name": "flipper-plugin-react-native-recoil-flipper",
-  "id": "react-native-recoil-flipper",
+  "name": "flipper-plugin-react-native-recoil",
+  "id": "recoil-state",
   "version": "0.0.1",
   "pluginType": "client",
   "main": "dist/bundle.js",
   "flipperBundlerEntry": "src/index.tsx",
   "license": "MIT",
   "keywords": [
-    "flipper-plugin"
+    "flipper-plugin", "react-native", "recoil", "state"
   ],
   "icon": "apps",
   "title": "Recoil State",
