--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2017",
     "module": "ES6",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "sourceMap": true,
     "noEmit": true,
     "strict": true,
