--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.2",
+    "@material-ui/icons": "^5.0.0-beta.1",
     "react-json-view": "^1.21.3"
   }
 }
