--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.2",
     "@material-ui/icons": "^5.0.0-beta.1",
+    "react": "^17.0.2",
     "react-json-view": "^1.21.3"
   }
 }
