--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@material-ui/core": "^5.0.0-beta.2",
     "@material-ui/icons": "^5.0.0-beta.1",
     "react": "^17.0.2",
-    "react-json-view": "^1.21.3"
+    "react-json-view": "^1.21.3",
+    "react-swipeable-views": "^0.14.0"
   }
 }
