--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.2",
     "@material-ui/icons": "^5.0.0-beta.1",
+    "deep-diff": "^1.0.2",
     "react": "^17.0.2",
     "react-json-view": "^1.21.3",
+    "react-json-view-compare": "^1.0.3",
     "react-swipeable-views": "^0.14.0"
   }
 }
